<?xml version="1.0" encoding="utf-8"?>
<!--
    This XML layout file represents the layout for the ProfileFragment, which displays user profile information
    including a welcome message, username, booked classes, and booked trainers. It includes a NestedScrollView
    to enable scrolling of the content.

    - The root layout is a FrameLayout containing a NestedScrollView to make the content scrollable.
    - Inside the NestedScrollView, there's a LinearLayout for arranging content vertically.
    - The LinearLayout contains TextViews for displaying the welcome message and username, and buttons for logout.
    - RecyclerViews are used to display the booked classes and trainers.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <!-- Scrollable container -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- Container for content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding20dp">

            <!-- Welcome message and username -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/welcomeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/padding20dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/text20sp"
                    android:text="@string/greeting"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/usernameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text20sp"
                    android:textStyle="bold"
                    android:text="@string/username" />

            </LinearLayout>

            <!-- Logout Button -->
            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:nestedScrollingEnabled="false"
                android:text="@string/logout"
                tools:ignore="ObsoleteLayoutParam" />

            <!-- Booked classes -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding20dp"
                android:paddingBottom="@dimen/padding20dp"
                android:textSize="@dimen/text20sp"
                android:text="@string/bookedClasses" />

            <!-- RecyclerView for booked classes -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bookedClassesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Booked trainers -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding20dp"
                android:paddingBottom="@dimen/padding20dp"
                android:textSize="@dimen/text20sp"
                android:text="@string/bookedTrainers" />

            <!-- RecyclerView for booked trainers -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bookedTrainerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>