<?xml version="1.0" encoding="utf-8"?>
<!--
    This XML layout file represents a vertical LinearLayout containing input fields for username and password,
    along with a button to register.

    - The root layout is a vertical LinearLayout with gravity set to center, occupying the entire screen.

    - Inside the root LinearLayout, there's another vertical LinearLayout with padding set to create spacing.
      This layout contains:
        - EditText for entering username
        - EditText for entering password
        - TextView acting as a button for registration

    - The EditText for username has a hint set to "Enter username".
    - The EditText for password has a hint set to "Enter password" and inputType set to textPassword for secure entry.

    - The TextView acting as the register button has a custom background, clickable, and focusable attributes.
      It displays the text "Sign Up" and triggers the registration action when clicked.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding20dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterUsername"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="@dimen/width100dp"
            android:layout_height="@dimen/height40dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/custom_signup_background"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signUp"
            android:textColor="@color/black"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
