<!--
    This XML layout file represents a login screen UI with two EditText fields for username and password,
    and a TextView acting as a login button.

    - The outer LinearLayout serves as the root layout, with vertical orientation and gravity set to center,
      ensuring the content is vertically centered within the parent.

    - Inside the outer LinearLayout, there's another nested LinearLayout used to contain the EditText fields
      and the login button. This nested LinearLayout has vertical orientation and padding defined by the
      dimension resource "@dimen/padding20dp".

    - The first EditText field with id "username" allows users to input their username. The hint attribute
      is set to a string resource "@string/enterUsername" for accessibility.

    - The second EditText field with id "password" allows users to input their password. The inputType attribute
      is set to "textPassword" to obscure the characters entered. The hint attribute is set to a string resource
      "@string/enterPassword" for accessibility.

    - The TextView with id "loginButton" serves as the login button. It has custom styling defined by the
      background drawable "custom_login_background". It is clickable and focusable, triggering the login action
      when clicked. The text attribute is set to a string resource "@string/login" for accessibility.

    Note: This layout is designed to be flexible and adaptable to different screen sizes and orientations.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding20dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterUsername"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="@dimen/width100dp"
            android:layout_height="@dimen/height40dp"
            android:layout_marginTop="@dimen/marginTop20dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/custom_login_background"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
